<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_bk" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/btn_selector"
            android:text="@string/settings"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:rippleColor="@null"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHandSelection"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btn_selector"
            android:text="@string/hand_nselection"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:rippleColor="@null"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1Player"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_selector"
                android:text="@string/_1_nplayer"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:rippleColor="@null"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2Player"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_selector"
                android:text="@string/_2_nplayer"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:rippleColor="@null"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>